test_suite/ERROR_incompatible_types.out
ERROR_incompatible_types.java: 11:  Semantic Error: Incompatible types: `B` can't be converted to `C`
